* Fuckhuge terry pitch vaginal scene done. Like, huge. 16k words.
* Jeanne can now craft some alchemy items that can change your gender.
* You need some ingredients to make the Homos item first though.
 - Spring water can be found in the forest.
 - Hummus can be bought from Patchwork (and sometimes Cale).
 - Letter can be found in a Rigard event.

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.3p
------------
* Added subDom and slut debug options to cocksmith (for player)
* Added the ability to sell items in multiples of 1x, 5x or all you carry. Made it overall easier to sell a lot of stuff.
* Added a new scene by QB/LD where Terry fucks bunnies (win->fuck(m))
* Added a new petting scene by QB/LD to Terry. Touch fluffy tail!
* Added a talk scene for Terry by QB/LD where you can ask him about his past.
* Added new patreon sponsored content:
 - Naga loss scene for cocked players by LonelyRonin.
* Made some tweaks to the code that should allow the game to run on offline Internet Explorer. Save/Load isn't possible, except by text.
* Implemented an EXTREMELY barebones pregnancy system.
 - Save/load works.
 - Placeholder appearance screen (only for player atm).
 - Placeholder progress messages (right now, implemented pregnancies are about 24 hours for testing purposes)
 - Currently, the PLAYER can get pregnant from bunnies, equines, lizards and cats.
* Added the first part of the Burrows questline.
 - The search for the scepter isn't implemented yet.
 - The perks aren't fully implemented yet.
 - Once unlocked, you can meet the new strains in the regular rabbit encounter.
 - Brute win scene added, written by QB/LD.
 - Brainy loss scene added, written by QB/LD.

Version 0.3o
------------
* Various bugfixes in new content.
* A fuckton of typo fixes, courtesy to Johnathan_Roberts.
* Another fuckton of typo fixes, courtesy to Spiegelmeister.
* Rosalin TFs:
 - Moth TF.