@@ -18,6 +18,7 @@ Version 0.3q
  - Spring water can be found in the forest.
  - Hummus can be bought from Patchwork (and sometimes Cale).
  - Letter can be found in a Rigard event.
+* There is a new short scene between terry and Orvin, if you have him in your party. Thanks LD and Del for the help!
 
 --------------------------------------------
              PREVIOUS VERSIONS
